--- a/bower.json
+++ b/bower.json
@@ -2,11 +2,11 @@
   "name": "ng-boilerplate",
   "version": "0.3.2",
   "devDependencies": {
-    "angular": "~1.2",
-    "angular-mocks": "~1.2",
-    "bootstrap": "~3.1",
-    "angular-bootstrap": "~0.10.0",
-    "angular-ui-router": "~0.2"
+    "angular": "~1.3.6",
+    "angular-mocks": "~1.3.6",
+    "ui-router": "~0.2.13",
+    "lodash": "~2.4.1",
+    "restangular": "~1.4.0"
   },
   "dependencies": {}
 }
