--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "author": "Josh David Miller",
-  "name": "ngbp",
+  "name": "ngSS",
   "version": "0.3.2",
   "homepage": "https://github.com/ngbp/ngbp",
   "licenses": {
@@ -14,24 +14,41 @@
   },
   "dependencies": {},
   "devDependencies": {
-    "grunt": "~0.4.1",
-    "grunt-contrib-less": "~0.11.0",
-    "grunt-contrib-clean": "^0.4.1",
-    "grunt-contrib-copy": "^0.4.1",
-    "grunt-contrib-jshint": "^0.4.3",
-    "grunt-contrib-concat": "^0.3.0",
-    "grunt-contrib-watch": "^0.4.4",
-    "grunt-contrib-uglify": "^0.2.7",
+    "axis": "^0.3.0",
+    "browserify": "^7.0.0",
+    "chai": "^1.10.0",
+    "chai-as-promised": "^4.1.1",
+    "coffeelint": "^1.6.1",
+    "grunt": "^0.4.5",
+    "grunt-bump": "0.0.16",
+    "grunt-coffeelint": "0.0.13",
+    "grunt-contrib-clean": "^0.6.0",
+    "grunt-contrib-coffee": "^0.12.0",
+    "grunt-contrib-concat": "^0.5.0",
+    "grunt-contrib-copy": "^0.7.0",
+    "grunt-contrib-jshint": "^0.10.0",
+    "grunt-contrib-stylus": "^0.20.0",
+    "grunt-contrib-uglify": "^0.6.0",
+    "grunt-contrib-watch": "^0.6.1",
+    "grunt-conventional-changelog": "^1.1.0",
+    "grunt-html2js": "^0.2.9",
+    "grunt-karma": "^0.9.0",
     "grunt-ng-annotate": "^0.8.0",
-    "grunt-html2js": "^0.1.9",
-    "grunt-contrib-coffee": "^0.7.0",
-    "grunt-coffeelint": "~0.0.10",
-    "grunt-conventional-changelog": "^0.1.2",
-    "grunt-bump": "0.0.6",
-    "karma-firefox-launcher": "^0.1.3",
-    "karma-jasmine": "^0.1.5",
-    "grunt-karma": "^0.8.2",
+    "jasmine-core": "^2.1.3",
+    "jeet": "^6.1.2",
+    "karma": "^0.12.28",
+    "karma-chai": "^0.1.0",
     "karma-coffee-preprocessor": "^0.2.1",
-    "karma": "^0.12.9"
+    "karma-firefox-launcher": "^0.1.4",
+    "karma-jasmine": "^0.3.4",
+    "karma-mocha": "^0.1.10",
+    "karma-sinon": "^1.0.4",
+    "mocha": "^2.0.1",
+    "nib": "^1.0.4",
+    "partialify": "^3.1.1",
+    "protractor": "^1.5.0",
+    "rupture": "^0.6.1",
+    "sinon": "^1.12.2",
+    "sinon-chai": "^2.6.0"
   }
 }
