--- a/bower.json
+++ b/bower.json
@@ -1,12 +1,14 @@
 {
-  "name": "ng-boilerplate",
+  "name": "ngSS",
   "version": "0.3.2",
   "devDependencies": {
-    "angular": "~1.3.6",
+    "angular": "~1.3.8",
+    "angular-bootstrap": "~0.12.0"
     "angular-mocks": "~1.3.6",
-    "ui-router": "~0.2.13",
+    "bootstrap-stylus": "~4.0.0",
     "lodash": "~2.4.1",
-    "restangular": "~1.4.0"
+    "restangular": "~1.4.0",
+    "ui-router": "~0.2.13",
   },
   "dependencies": {}
 }
