--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {},
   "devDependencies": {
     "axis": "^0.3.0",
+    "bootstrap-styl": "^4.0.0",
     "browserify": "^7.0.0",
     "chai": "^1.10.0",
     "chai-as-promised": "^4.1.1",
