--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "chai-as-promised": "^4.1.1",
     "coffeelint": "^1.6.1",
     "grunt": "^0.4.5",
+    "grunt-browserify": "^3.3.0",
     "grunt-bump": "0.0.16",
     "grunt-coffeelint": "0.0.13",
     "grunt-contrib-clean": "^0.6.0",
@@ -38,11 +39,14 @@
     "jasmine-core": "^2.1.3",
     "jeet": "^6.1.2",
     "karma": "^0.12.28",
+    "karma-browserify": "^2.0.0",
     "karma-chai": "^0.1.0",
     "karma-coffee-preprocessor": "^0.2.1",
+    "karma-commonjs": "0.0.13",
     "karma-firefox-launcher": "^0.1.4",
     "karma-jasmine": "^0.3.4",
     "karma-mocha": "^0.1.10",
+    "karma-phantomjs-launcher": "^0.1.4",
     "karma-sinon": "^1.0.4",
     "mocha": "^2.0.1",
     "nib": "^1.0.4",
